--- a/docker/nginx-default.conf
+++ b/docker/nginx-default.conf
@@ -4,6 +4,10 @@ upstream mapproxy {
 server {
     listen 80;
 
+    listen 443 ssl http2;
+    ssl_certificate /etc/ssl/certs/origin-cert.pem;
+    ssl_certificate_key /etc/ssl/private/origin-key.key;
+
     # Setting a keep-alive timeout on the server side helps in mitigation of DOS attacks
     keepalive_timeout 10;
 
